Author tag changes
+ some left-over checkstyle

--- a/build.properties
+++ b/build.properties
@@ -41,7 +41,7 @@ distDir=dist
 genDir=generated
 
 # Class to run
-mainClass=protype.Run.java
+mainClass=core.Run
 
 # Root of all computer-generated documentation...
 genDocsDir=generated/docs
