Updated logging pathing and properties

--- a/build.properties
+++ b/build.properties
@@ -41,7 +41,7 @@ distDir=dist
 genDir=generated
 
 # Class to run
-mainClass=core.Run
+mainClass=src.main.java.core.Run
 
 # Root of all computer-generated documentation...
 genDocsDir=generated/docs
