--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 *.jar
 *.war
 *.ear
+
+# Log Files #
 *.log
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
